# DR-REMOVER

./: README.md
DR-REMOVER-master/: CMakeLists.txt  package.xml
DR-REMOVER-master/config/: POSS_00.yaml  POSS_01.yaml  POSS_02.yaml  POSS_04.yaml  POSS_05.yaml  apollo_00.yaml  apollo_01.yaml  apollo_02.yaml  apollo_03.yaml  apollo_04.yaml  kitti_00.yaml  kitti_01.yaml  kitti_02.yaml  kitti_05.yaml  kitti_07.yaml
DR-REMOVER-master/include/DR_remover/: MapUpdater.h  remover.h
DR-REMOVER-master/include/tools/: remover_utils.hpp
DR-REMOVER-master/launch/: run_remover.launch  viz_map.launch
DR-REMOVER-master/msg/: nodes.msg
DR-REMOVER-master/rviz/: remover.rviz  visualize_map.rviz
DR-REMOVER-master/scripts/: analysis_py3.py
DR-REMOVER-master/scripts/semantickitti2bag/pykitti/: odometry.py  utils.py
DR-REMOVER-master/src/offline_map_updater/: main.cpp
DR-REMOVER-master/src/offline_map_updater/src/: map_remover.cpp  map_updater.cpp  remover_utils.cpp
DR-REMOVER-master/src/utils/: visualize_map.cpp
